--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,10 @@ theme: hexo-theme-matery
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: git
+  repo: git@github.com:Feng-ML/Feng-ML.github.io.git
+  branch: master
+  ignore_hidden: false
 
 # 搜索
 search:
