--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle: ''
+title: 海棠的博客
+subtitle: 欢迎
 description: ''
 keywords:
 author: 海棠
